# systemd-schema

./: Cargo.toml  README.md
examples/: service.rs
src/: common.rs  condition.rs  files.rs  install.rs  lib.rs  resource_control.rs  service.rs  unit.rs
tests/: serialize.rs
