[package]
name = "systemd_schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_with = "^1.12.0"
bytesize = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
serde_ini = "0.2.0"
